syntax = "proto3";

import "inner_messages.proto";

package PROTO;

message UnionContainer {
  int32 prefix = 1;
  oneof msg {
      UnionInnerOne msg1 = 10;
      UnionInnerTwo msg2 = 11;
      UnionInnerThree msg3 = 12;
  }
  int32 suffix = 99;
}